<resources>
    <string name="app_name">TariflerCarpisiyor</string>

    <string-array name="RecipesCategories">
        <item>Categori seçiniz</item>
        <item>Tavuk Yemekler</item>
        <item>Çorba Tarifleri</item>
        <item>Et Yemekleri</item>
        <item>Makarnalar</item>
        <item>Pilavlar</item>
        <item>Hamur İşleri</item>
        <item>Tatlılar</item>
        <item>Kurabiyeler</item>
        <item>Pastalar ve Kekler</item>
        <item>Salatalar</item>
        <item>Anne Tarifleri</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Ana Sayfa</string>
    <string name="title_Categories">Kategoriler</string>
    <string name="title_FindMeal">Dolapta Ne Var?</string>
    <string name="title_Profile">Profilim</string>
    <string name="title_AddRecipe">Tarif Ekle</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Adınız: </string>
    <string name="e_mail">Mail: </string>
    <string name="surname">Soyadınız: </string>
    <string name="phone_number">Telefon numaranız: </string>
    <string name="dies">###</string>
    <string name="email_address">Email Address</string>
    <string name="mail_address">Mail Adress</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="edit_profile">Profilinizi tamamlayınız</string>
    <string name="enter_your_name">İsminizi düzenleyiniz</string>
    <string name="enter_your_surname">Soy isminizi düzenleyiniz</string>
    <string name="enter_your_phone_number">Telefon numaranızı giriniz</string>
    <string name="ok">Kaydet</string>
    <string name="ingredient">Malzemeyi giriniz</string>
    <string name="search_button">Tarifleri bul</string>
    <string name="saved_button">Tarifi Favorilere ekle</string>
    <string name="ingredient_instruction">Buzdolabınızda bulunan 4  ana malzemeyi  girerek tarifleri bulun</string>
    <string name="info">Hakkınızda kısmı</string>
    <string name="update_profile">Profilinizi düzenleyebilirsiniz</string>

</resources>