<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.CreateProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/update_imageView"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:layout_gravity="center_vertical"
                android:foreground="@drawable/rounded"
                android:onClick="SelectProfileImage"
                android:src="@drawable/ic_action_profile_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/edit_profile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/EditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autoText="true"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName|textCapSentences"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/EditTextSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autoText="true"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/enter_your_surname"
                android:inputType="textPersonName|textCapSentences"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/EditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autoText="true"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/EditTextInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autoText="true"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/info"
                android:inputType="textPersonName|textCapSentences"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textViewEmailAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:text="@string/email_address"
                android:textColor="@color/ColorSecondaryText"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark" />

            <ProgressBar
                android:id="@+id/progressbar_cp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorSecondaryDark"
                android:visibility="invisible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>